vcs/specs/parser/fail/contexts/invalid_provide.vr
// @test: parse-fail
// @level: L0
// @tags: parser, contexts, provide, unclosed, error
// @description: Test unclosed provide statement
// @expected-error: E011

fn test() {
    provide Database = {
}
